ngApp - edit todo
